apps/base/lightwallet/lightwallet-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zcash-stack-lightwalletd
  namespace: zcash
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zcash-stack-lightwalletd
  serviceName: ""
  template:
    metadata:
      labels:
        app: zcash-stack-lightwalletd
    spec:
      containers:
      - args:
        - --grpc-bind-addr
        - 0.0.0.0:9067
        - --tls-cert-path
        - --/srv/lightwalletd/certs 
        - --zcash-conf-path
        - /srv/lightwalletd/conf/zcash.conf
        - --data-dir
        - /srv/lightwalletd/db_volume
        - --log-file
        - /dev/stdout
        command:
        - lightwalletd
        image: electriccoinco/lightwalletd:latest
        imagePullPolicy: IfNotPresent
        name: lightwalletd
        ports:
        - containerPort: 9067
          name: grpc
          protocol: TCP
        resources:
          requests:
            cpu: "0"
            memory: "0"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        
        - mountPath: /srv/lightwalletd/db_volume
          name: lightwalletd-data
        
        - mountPath: /srv/lightwalletd/conf
          name: config
        
        - mountPath: /srv/lightwalletd/certs 
          name: lightwallet-certs 
      
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      
      volumes:
  
      - configMap: 
          defaultMode: 420
          name: config  
        name: config 
      
      - secret:
         secretName: lightwallet-certs
        name: lightwallet-certs 
  
      - name: lightwalletd-data 
        persistentVolumeClaim:
            claimName: lightwalletd-data 
  
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: lightwalletd-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 200Gi
      storageClassName: local-path
      volumeMode: Filesystem
