apps/base/lightwallet/loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: lightwalletd-rpc
  namespace: zcash 
  labels:
    cilium-lb-pool: sirius-ippool
  annotations:
    lbipam.cilium.io/sharing-key: sirius-services
spec:
  type: LoadBalancer
  externalIPs:
    - "5.161.82.129"
  externalTrafficPolicy: Cluster
  selector:
    app: zcash-stack-lightwalletd 
  ports:
    - name: rpc 
      protocol: TCP
      port: 8443
      targetPort: 9067
