apps/base/lightwallet/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lightwalletd
  namespace: zcash 
  annotations:
        # Optional: if Cilium isn't the default ingress controller
      kubernetes.io/ingress.class: cilium
      ingress.cilium.io/host-listener-port: "443"
      ingress.cilium.io/upstream-protocol: "H2C" 

spec:
  ingressClassName: cilium # Or use the annotation above
  rules:
  - host: zcash.sirius-sec.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lightwallet-service    
            port:
             number: 9067
  tls:
    - hosts:
      - zcash.sirius-sec.com
      secretName: lightwallet-certs
